# zazaki_ssh

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
cmake/: Dependencies.cmake  Warnings.cmake
docs/schemas/: config.schema.yaml  exec-result.schema.json
docs/superpowers/plans/: 2026-07-03-zssh-implementation-plan.md
docs/superpowers/specs/: 2026-07-03-zssh-design.md
src/: main.cpp
src/zssh/cli/: CliParser.cpp  CliParser.hpp  CommandDispatcher.cpp  CommandDispatcher.hpp  DefaultCommandRuntime.cpp
src/zssh/config/: AppConfig.hpp  ConfigLoader.cpp  ConfigLoader.hpp
src/zssh/copy/: CopyRequest.hpp  CopyService.cpp  CopyService.hpp  IProgressSink.hpp  RateLimiter.cpp  RateLimiter.hpp  SftpTransfer.cpp  SftpTransfer.hpp  TransferPlanner.cpp  TransferPlanner.hpp
src/zssh/core/: CommandModel.hpp  Error.hpp
src/zssh/platform/: IPlatformServices.hpp
src/zssh/platform/linux/: LinuxPlatformServices.cpp  LinuxPlatformServices.hpp
src/zssh/platform/windows/: WindowsPlatformServices.cpp  WindowsPlatformServices.hpp
src/zssh/protocol/: ISshAdapter.hpp  LibsshAdapter.cpp  LibsshAdapter.hpp  LibsshError.hpp
src/zssh/renderer/: AnsiTerminalRenderer.cpp  AnsiTerminalRenderer.hpp  CatppuccinMochaTheme.hpp  ITerminalRenderer.hpp
src/zssh/session/: BackpressureController.cpp  BackpressureController.hpp  BoundedByteQueue.hpp  SessionManager.cpp  SessionManager.hpp
tests/fixtures/config/: default.yaml  password.yaml
tests/integration/: ConnectInteractiveSmokeTest.cpp  ExecJsonCliTest.cpp
tests/support/: FakePlatformServices.hpp  FakeSshAdapter.hpp  FakeTerminalRenderer.hpp
tests/unit/cli/: AdditionalCommandParsingTest.cpp  CliParserTest.cpp
tests/unit/config/: ConfigLoaderTest.cpp
tests/unit/copy/: CopyServiceTest.cpp  RateLimiterTest.cpp  SftpTransferTest.cpp  TransferPlannerTest.cpp
tests/unit/core/: StartupSmokeTest.cpp
tests/unit/platform/: PlatformServicesContractTest.cpp
tests/unit/renderer/: AnsiTerminalRendererTest.cpp
tests/unit/session/: BackpressureControllerTest.cpp  SessionManagerExecTest.cpp  SessionManagerLargeOutputTest.cpp
